# obs-mac-virtualcam

src/common/: MachProtocol.h
src/obs-plugin/: CMakeLists.txt  MachServer.h  MachServer.mm  plugin-main.mm
